--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           sessionStorage.setItem('userCountry', selectedCountry);
           sessionStorage.setItem('userGender', selectedGender);
 
-          window.location.href = "/online chating /chating.html";
+          window.location.href = "chating.html";
         })
         .catch((error) => {
           console.error(error);
