--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <input type="checkbox" id="ageCheck" />
       I confirm that I am at least 18 years old.
     </label>
-    <p>I accept <a href="/online chating /parivcy.html"target="/blank">User Agreement</a>.</p>
+    <p>I accept <a href="parivcy.html"target="/blank">User Agreement</a>.</p>
   </footer>
 
   <!-- Firebase SDKs -->
